Mon Jun 13 12:37:31 GMT 2011  Olly Betts <olly@survex.com>

	* xapian.i: Remove deprecated Enquire::set_sort_by_* methods.

Mon Jun 13 12:10:39 GMT 2011  Olly Betts <olly@survex.com>

	* python/extra.i: Remove checks for deprecated forms of Enquire
	  set_sort_* methods, which have now been removed from the C++ API.

Mon Jun 13 11:43:20 GMT 2011  Olly Betts <olly@survex.com>

	* python/extra.i,python/util.i: Hide away the deprecated non-pythonic
	  iterators - we still need them to implement the pythonic iterators,
	  so we can't entirely remove them.
	* python/pythontest2.py: Check that the deprecated methods are no
	  longer accessible (not all methods are checked).
	* docs/index.html: Update documentation to say they've been removed.

Mon Jun 13 10:35:29 GMT 2011  Olly Betts <olly@survex.com>

	* python/extra.i: Remove deprecated Stem_get_available_languages().
	* python/pythontest2.py: Add test to make sure it stays removed!

Mon Jun 13 10:10:56 GMT 2011  Olly Betts <olly@survex.com>

	* python/pythontest2.py: Fix odd ordering of line and comment (which
	  has been that way since I committed the change which added the
	  code around the comment.

Mon Jun 13 09:54:20 GMT 2011  Olly Betts <olly@survex.com>

	* csharp/Makefile.am,csharp/docs/index.html,java-swig/Makefile.am,
	  lua/docs/index.html,php/docs/index.html,python/docs/index.html,
	  ruby/docs/index.html,tcl8/docs/index.html,xapian-head.i,xapian.i:
	  Update for removal of flint.

Mon Jun 13 09:34:05 GMT 2011  Olly Betts <olly@survex.com>

	* configure.ac: Update version to 1.3.0.

Sun Jun 12 23:34:24 GMT 2011  Olly Betts <olly@survex.com>

	* php/Makefile.am: The SWIG upgrade means we now have xapian_wrap.h as
	  well as xapian_wrap.cc.  Really the final update for 1.2.6.

Sun Jun 12 13:06:16 GMT 2011  Olly Betts <olly@survex.com>

	* configure.ac: Lua's _VERSION reports "Lua 5.0.3" for Lua 5.0.3, so
	  add '|5.0.*' to the pattern since '5.0' won't match.
